assets/css/post_page.css
.upper_taglist{
  margin-left: auto;
  margin-right: auto;
  max-width: 90%;

}
.less {
    overflow: hidden;
    height:1.8em;

}
.taglist{

  margin: 0 auto;
  padding: 0.5vw 0 6vw 0;
  max-width: 840px;
  display: flex;
  flex-wrap: wrap;
}
.more-tags-button {
    display:none;
    padding: 9px 16px;
    border-style: solid;
    border-color: #3eb0ef;
    border-width: 1px;
    font-size: 1.2rem;
    line-height: 1;
    color:#ffff;
    font-weight: 500;
    border-radius: 20px;
    transition: all ease 0.2s;
    background-color: #3eb0ef

}

.more-tags-button:hover {
  border-color: #3eb0ef;
  color: #3eb0ef;
  text-decoration: none;
  background-color: #ffff;
}

.tag_item{
margin: 3px;
padding: 5px 10px;
font-size: 12px;
cursor: pointer;
display: inline-block;
border-style: solid;
border-color: gray;
border-width: 1px;
border-radius: 20px;
transition: all ease 0.2s;
color: black;
}

.tag_item:hover {
  border-color: #3eb0ef;
  color: #3eb0ef;
  text-decoration: none;
}

.taglabel{
  margin: 0 auto;
  padding: 0.5vw 0 0 0;
  max-width: 840px;
}
.questionlist{
display: flex;
flex-wrap: wrap;
justify-content: center;
margin-bottom: 20px;
}




.correct_option , .wrong_option {
  display: none;
  line-height: 50px;
  margin: 10px;
  text-align: center;
  width: 40%;
  border-style: solid;
  border-color: gray;
  border-width: 2px;
  border-radius: 20px;
  transition: all ease 0.2s;
  color: black;
  font-size: 16px;
}

.correct_option:hover , .wrong_option:hover{
  transform: scale(1.05);
}


.correct_answer{
    border-color: lightgreen;
    color:MediumSeaGreen;
}
.wrong_answer{
  border-color: coral;
  color: coral;
}
@media (max-width: 400px) {

  .correct_option , .wrong_option{

    width:100%;
  }
}
.fadeMe {
  animation:fadeIn 0.2s linear;
}

@keyframes fadeIn {
  0% {
    opacity:0
  }
  100% {
    opacity:1;
  }
}

.fadeMe.none {
  display:none
}

.question_message{
  color: MediumSeaGreen;
  text-align: center;
  margin-top: 30px;
  padding: 5px;
  transform: scale(0.8);
}


/* CSS code the the Discourse popup message */
.Discourse_button {
  align-content: center;
  background-color : #351ded;
  color: white;
  padding: 10px 20px;
  border-radius: 50%;
  height: 84px;
  padding-top: 8px;
  transform: scale(0.7);
  outline:none;
}
.Discourse_button:hover{
transform: scale(0.8);
}
#Forum_Button {
  position: fixed;
  bottom: -20px;
    z-index: 9999;
  right: -5px;
  margin-bottom: 30px;
  margin-right: 20px;
}
.Discourse_close{
  position: absolute;
  top: -17px;
  right: 17px;
  transform: scale(1.4);
}
.Discourse_close:hover{
  transform: scale(2);
}


.Discourse_Forum{
 display: none;
 position: fixed;
  border-radius: 5px;
  z-index: 999;
 padding: 0px;
 padding-top: -5px;
  background-color:#351ded;
  bottom: 95px;
  right: 20px;
  width: 350px;
  height: 280px;
 font-size: 18px;
 color: white;
 text-align: center;
}

.Discourse_Popup_Container{
    position: absolute;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%)
}

.Discourse_Popup_Content{
  text-align: center;
}

@media (max-width: 400px) {
.Discourse_button {
  transform: scale(0.6);
}
#Forum_Button {
bottom: -30px;
right: -20px;

}

 .Discourse_Forum{
   width: 100%;
   height: 100%;
   top:0px;
   left: 0px;
   z-index: 9999;
   border-radius: 0px;
   background-color: rgba(0,0,0,0.9);
 }
 .Discourse_Popup_Container{
  padding: 25px;
  width: 95%;
   background-color:#351ded;
 }
 .Discourse_close{
   transform: scale(2);
   margin-top: 30px;
 }
 .Discourse_close:hover{
   transform: scale(3);
 }
}

.discourse_link{

border: 2px solid white;
border-radius: 20px;
color: #fff;
padding: 0px 10px 5px 10px;
transition: 0.3s;

}
.discourse_link:hover{
background: rgba(0,0,0,0.3)
}

.community_icon{
  width: 128px;
  margin-bottom:  15px;
  margin-top: -5px;
}

/*CSS code for the table of contents*/
.table_of_contents{
  color:#3eb0ef;
  margin-bottom: 20px;
  margin-top: 20px;
  margin-left: 5px;
  margin-right: auto;
  max-width: 840px;
  display: flex;
  flex-wrap: wrap;
  justify-content: left;

}


.in_page_link {
  color: black;
  text-align: left;
  width: 150px;
  padding: 5px;
  display: inline-block;
  margin: 5px;
  border-right: 1px solid lightgrey;
  border-top :1px solid lightgrey;
  border-bottom:1px solid lightgrey;
  border-left: 3px solid 	#3eb0ef;
  transition: all ease 0.5s;
}



.in_page_link:hover{
  font-size: 17px;
  color: #3eb0ef;

}
@media (max-width: 400px) {
  .table_of_contents{
    width: 100%;

  }
  .in_page_link{
    width: 45%;
  }
}

